[package]
name = "arcade-attacker"
version = "0.1.0"
description = "Test-only program: CPIs record_payment to prove the top-level guard"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "arcade_attacker"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
mainnet = []

[dependencies]
anchor-lang = "0.32.1"
