[package]
name = "gamerplex-arcade"
version = "0.1.0"
description = "Gamerplex Arcade — first-party solo micro-games with on-chain scores, payments, and leaderboards"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "gamerplex_arcade"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
custom-heap = []
custom-panic = []
anchor-debug = []
mainnet = []

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
solana-program = "2.3"
bs58 = { version = "0.5", default-features = false, features = ["alloc"] }
solana-security-txt = "1.1.1"
